Initial commit of website

--- a/images.html
+++ b/images.html
@@ -15,9 +15,9 @@
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\senate.jpg" height="300"/>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\wedding2.jpg" height="300"/><br>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\yahbulon-logo.jpg" height="300"/>
-                    <img src="C:\Users\Richie\Desktop\HTML\Picture\Ann's-shito-flyer.jpg" height="300"/>
-                    <img src="C:\Users\Richie\Desktop\HTML\Picture\Ann's-shito-flyer-2.jpg" height="300"/>
-                    <img src="C:\Users\Richie\Desktop\HTML\Picture\Yah-Peanut-Butter.jpg" height="300"/>
+                    <img src="C:\Users\Richie\Desktop\HTML\Picture\ann's-shito-flyer.jpg" height="300"/>
+                    <img src="C:\Users\Richie\Desktop\HTML\Picture\ann's-shito-flyer-2.jpg" height="300"/>
+                    <img src="C:\Users\Richie\Desktop\HTML\Picture\yah-peanut-butter.jpg" height="300"/>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\jokiez-samosa.jpg" height="300"/><br>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\jokiez-tombrown.jpg" height="300"/>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\jokiez-plantain-chips.png" height="300"/>
