--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\pngegg.png" width="300"/>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\shito_1.png" width="300" height="250"/>
                     <img src="C:\Users\Richie\Desktop\HTML\Picture\yahbulon-logo.jpg" width="300" height="250"/>
-                    <img src="C:\Users\Richie\Desktop\HTML\Picture\BankuTilapia.jpg" width="300" height="250"/>
+                    <img src="C:\Users\Richie\Desktop\HTML\Picture\bankutilapia.jpg" width="300" height="250"/>
                 </p>
                 <h2>Jokiez Foods</h2>
                 <p>Jokiez Foods is a brand that deals in a wide rage of food products ranging from fast foods 
