--- a/logos.html
+++ b/logos.html
@@ -25,7 +25,7 @@
                 <img src="C:\Users\Richie\Desktop\HTML\logos\maridan3d.jpg" height="250"/>
                 <img src="C:\Users\Richie\Desktop\HTML\logos\senate.jpg" height="250"/>
                 <img src="C:\Users\Richie\Desktop\HTML\logos\3dfood.jpg" height="250"/>
-                <img src="C:\Users\Richie\Desktop\HTML\logos\Themens.jpg" height="250"/>
+                <img src="C:\Users\Richie\Desktop\HTML\logos\themens.jpg" height="250"/>
                 <img src="C:\Users\Richie\Desktop\HTML\logos\africa2.jpg" height="250"/>
                 <img src="C:\Users\Richie\Desktop\HTML\logos\africa1.jpg" height="250"/>
             </div>
